# project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_export.py
.github/workflows/: ci.yml
docs/: architecture.md
personio_export/: __init__.py  client.py  config.py  delivery.py  documents.py  exporter.py  report.py  sample_data.py  transform.py
tests/: test_client.py  test_config.py  test_delivery.py  test_documents.py  test_end_to_end.py  test_sample_data.py  test_transform.py
